UX: Fix fullscreen open morph clipped by figure overflow

--- a/stylesheets/slider.scss
+++ b/stylesheets/slider.scss
@@ -410,6 +410,7 @@
 
   .d-ic {
     margin: 0;
+    overflow: visible;
   }
 
   .d-ic__viewport {
